refactor: toList() 바로 호출